# flask-web-bluetooth-scanner

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
src/: company_identifier.py  logger.py  scanner.py
templates/: index.html
